# aoc

./: pyproject.toml
aoc/2020/: day1.py  day10.py  day2.py  day3.py  day4.py  day6.py  day7.py  day8.py  day9.py
aoc/2021/: day1.py  day10.py  day11.py  day12.py  day13.py  day13_v1.py  day14.py  day15.py  day15_v1.py  day16.py  day17.py  day18 copy.py  day18.py  day19.py  day2.py  day20.py  day21.py  day21_v2.py  day22.py  day22_guillaume.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day8_v1.py  day9.py  ex24 copy.txt  ex24.txt
aoc/2022/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day21.py  day22.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
